--- a/index.html
+++ b/index.html
@@ -7,59 +7,39 @@
 
     <meta
       property="og:description"
-      content="NUESA MOCK TEST - Welcome to NUESA MOCK TEST's portfolio. "
+      content="NUESA MOCK TEST - Welcome to NUESA MOCK TEST. "
     />
 
     <meta name="author" content="Ibrahim Kolabalogun" />
 
     <meta
       name="keywords"
-      content="Aisha, NUESA MOCK TEST, Ibrahim, Video, Video Editor, Ibrahim, ibrahimkolabalogun, Ibrahim Kolabalogun, Sound, Sound Engineer, Videography
-      Video Production,
-      Cinematography,
-      Filmography,
-      Video Editing,
-      Visual Storytelling,
-      Corporate Videos,
-      Wedding Videos,
-      Event Videography,
-      Documentary Films,
-      Brand Promotional Videos,
-      Travel Videos,
-      Music Videos,
-      Short Films,
-      Video Portfolio,
-      Videographer Portfolio,
-      Video Services,
-      Video Projects,
-      Video Reel,
-      Video Showreel"
+      content="Aisha, NUESA MOCK TEST, Ibrahim,   ibrahimkolabalogun, Ibrahim Kolabalogun, Test, Mock Test"
     />
-
     <meta property="og:site_name" content="NUESA MOCK TEST" />
 
     <!-- website name -->
-    <meta property="og:site" content="https://aisha-banks.netlify.app/" />
+    <meta property="og:site" content="https://nuesa-mock-test.web.app/" />
     <!-- website link -->
     <meta property="og:title" content="NUESA MOCK TEST" />
 
     <meta
       property="og:description"
-      content="NUESA MOCK TEST - Welcome to NUESA MOCK TEST's portfolio."
+      content="NUESA MOCK TEST - Welcome to NUESA MOCK TEST."
     />
 
     <meta property="og:image" content="/vite.svg" />
     <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="https://aisha-banks.netlify.app/" />
+    <meta property="og:url" content="https://nuesa-mock-test.web.app/" />
     <!-- where do you want your post to link to -->
     <meta property="og:type" content="article" />
 
     <meta property="og:image" content="/vite.svg" />
     <meta name="twitter:image" content="/vite.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aisha-banks.netlify.app/" />
+    <meta property="og:url" content="https://nuesa-mock-test.web.app/" />
 
-    <link rel="canonical" href="https://aisha-banks.netlify.app/" />
+    <link rel="canonical" href="https://nuesa-mock-test.web.app/" />
 
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="NUESA MOCK TEST" />
@@ -69,7 +49,7 @@
         "@context": "https://aisha-banks.netlify.app",
         "@type": "WebPage",
         "name": "NUESA MOCK TEST",
-        "description": "NUESA MOCK TEST - Welcome to NUESA MOCK TEST's portfolio. ",
+        "description": "NUESA MOCK TEST - Welcome to NUESA MOCK TEST. ",
         "url": "https://aisha-banks.netlify.app"
       }
     </script>
