--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
     <script type="application/ld+json">
       {
-        "@context": "https://aisha-banks.netlify.app",
+        "@context": "https://nuesa-mock-test.web.app/",
         "@type": "WebPage",
         "name": "NUESA MOCK TEST",
         "description": "NUESA MOCK TEST - Welcome to NUESA MOCK TEST. ",
-        "url": "https://aisha-banks.netlify.app"
+        "url": "https://nuesa-mock-test.web.app/"
       }
     </script>
 
